--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -6,8 +6,13 @@
    "source": [
     "# Example 1: Separation of a Binary Mixture\n",
     "\n",
-    "#### Plot the Operating Lines and Equilibrium Curve for a Benzene/Toluene Mixture.\n",
-    "#### The Reflux Ratio must be greater than a minimum value for a feasible separation.\n",
+    "\n",
+    "#### This example shows the distillation column for a mixture of Benzene (Light Key) and Toluene (Heavy Key)\n",
+    "#### The rectifying and stripping operating lines of the column are affected by 3 parameters -- the reflux ratio, and the concentrations of the distillate and bottoms streams leaving from the top and bottom of the column, respectively.\n",
+    "\n",
+    "#### A simple Raoult's Law Model is used to produce the thermodynamic equilibrium data for this mixture.\n",
+    "\n",
+    "#### The Reflux Ratio must be greater than a minimum value for a feasible separation.  This demo will show that if the Reflux Ration is too low, the rectifying and stripping operating lines will not intersect beneath the Equilibrium Curve.\n",
     "\n"
    ]
   },
@@ -118,7 +123,15 @@
    "metadata": {},
    "source": [
     "### Demo 1: Stripping Line\n",
-    "##### An infinite number of stages are needed as the stripping line approaches the fixed point on the Equilibrium Curve."
+    "\n",
+    "##### The Stripping Operating Line is defined by the equation:\n",
+    "\n",
+    "##### The Stripping Operating Line (green line) is defined by the set values for Reflux Ratio and Bottoms Composition.  \n",
+    "##### An infinite number of stages are needed as the stripping line approaches the Equilibrium Curve (blue curve).  This results in a 'Fixed Point.'  The blue triangles on the x-axis show that despite infinitely many equilibrium stages, the concentration cannot move past this point.\n",
+    "\n",
+    "##### This graph also includes dashed gray lines, depicting the McCabe-Thiele graphical method for calculating the equilibrium stage compositions.\n",
+    "\n",
+    "#### Use the sliders to change the parameters and see how the Fixed Point responds."
    ]
   },
   {
@@ -129,7 +142,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e587724b4b994521bb1b686e23859848",
+       "model_id": "5744fabd13ac44a3a2211049e01e278f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +177,12 @@
    "metadata": {},
    "source": [
     "### Demo 2: Rectifying Line\n",
-    "##### An infinite number of stages are needed as the rectifying line approaches the fixed point on the Equilibrium Curve."
+    "##### The Rectifying Operating Line (green line) is defined by the set values for Reflux Ratio and Distillate Composition.  \n",
+    "##### An infinite number of stages are needed as the rectifying line approaches the Equilibrium Curve (blue curve). This results in a 'Fixed Point.' The blue circles on the x-axis show that despite infinitely many equilibrium stages, the concentration cannot move past this point.\n",
+    "\n",
+    "##### This graph also includes dashed gray lines, depicting the McCabe-Thiele graphical method for calculating the equilibrium stage compositions.\n",
+    "\n",
+    "#### Use the sliders to change the parameters and see how the Fixed Point responds."
    ]
   },
   {
@@ -175,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f6f92743ad041f797575f0e84849305",
+       "model_id": "cb4a78b3a60b48f6b2653c9446b1bef9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -210,7 +228,12 @@
    "metadata": {},
    "source": [
     "### Demo 3: Full Column\n",
-    "##### The graph on the right shows both operating lines.  The lines are green when the column parameters are feasible and red when unfeasible.\n",
+    "\n",
+    "##### This demonstration shows the previous graphs, as well as a third graph on the right for the entire distillation column.  The color of the operating lines shows changes based on the set parameters.  Green operating lines indicate a feasible column.  Red operating lines, however mean the column is not feasible.  If this is the case, look for the fixed points on the graph.  The x-axis below will also show that the triangles for the stripping section and circles for the rectifying section do not overlap.\n",
+    "#### Try changing the paramters to yield green operating lines.  Now look at the x-axis to see the overlap between rectifying and stripping sections.  How do the parameters affect the number of Equilibrium Stages?\n",
+    "\n",
+    "###### Note that not all of the symbols on the x-axis correspond to real stage equilibria in the column.\n",
+    "\n",
     "\n"
    ]
   },
@@ -222,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c684d9ba4d6a4e8f90301b732efde6e2",
+       "model_id": "2cdcce43ebc541fe858736cd22f45681",
        "version_major": 2,
        "version_minor": 0
       },
