--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -124,8 +124,6 @@
    "source": [
     "### Demo 1: Stripping Line\n",
     "\n",
-    "##### The Stripping Operating Line is defined by the equation:\n",
-    "\n",
     "##### The Stripping Operating Line (green line) is defined by the set values for Reflux Ratio and Bottoms Composition.  \n",
     "##### An infinite number of stages are needed as the stripping line approaches the Equilibrium Curve (blue curve).  This results in a 'Fixed Point.'  The blue triangles on the x-axis show that despite infinitely many equilibrium stages, the concentration cannot move past this point.\n",
     "\n",
@@ -142,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5744fabd13ac44a3a2211049e01e278f",
+       "model_id": "ae4d5fe6e7ed4a91b7c9164325cd3ff1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +175,9 @@
    "metadata": {},
    "source": [
     "### Demo 2: Rectifying Line\n",
-    "##### The Rectifying Operating Line (green line) is defined by the set values for Reflux Ratio and Distillate Composition.  \n",
+    "\n",
+    "##### The Rectifying Operating Line (green line) is defined by the set values for Reflux Ratio and Distillate Composition:\n",
+    "##### $y_{n+1} = [\\frac{R}{R+1}]x_n + \\frac{x_D}{R+1}$\n",
     "##### An infinite number of stages are needed as the rectifying line approaches the Equilibrium Curve (blue curve). This results in a 'Fixed Point.' The blue circles on the x-axis show that despite infinitely many equilibrium stages, the concentration cannot move past this point.\n",
     "\n",
     "##### This graph also includes dashed gray lines, depicting the McCabe-Thiele graphical method for calculating the equilibrium stage compositions.\n",
@@ -193,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb4a78b3a60b48f6b2653c9446b1bef9",
+       "model_id": "5c0e99ed9fe0450082f706e903c3dd75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cdcce43ebc541fe858736cd22f45681",
+       "model_id": "0a2eddf1288541aca670292a5feabeb8",
        "version_major": 2,
        "version_minor": 0
       },
