--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -295,6 +295,13 @@
     "layout_oplines = VBox([HBox(oplines_plot.children[:-1]), oplines_button, out_oplines])\n",
     "display(layout_oplines)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 5: Arclength Continuation"
+   ]
   }
  ],
  "metadata": {
