--- a/src/ex3_arclength_cont.ipynb
+++ b/src/ex3_arclength_cont.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "    return y\n",
     "\n",
     "# Create a Raoult's law object\n",
-    "vle_model = VLEEmpiricalModelBinary(xtoy)\n",
+    "vle_model = VLEEmpiricalModelBinary(xtoy, ['Benzene', 'Ethylenediamene'])\n",
     "xD = 0.95\n",
     "xB = 0.05\n",
     "r = 0 # starting value\n",
@@ -248,14 +248,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 5: Arclength Continuation\n",
+    "\n",
+    "##### This demonstration shows the Rectifying Operating Line and its relationship with the tangent pinch point. The top graphs is similar to Demo 3.  The bottom graphs shows the composition of the pinch as a function of the Reflux Ratio\n",
+    "##### In both graphs, the green line is the rectifying line, and the blue curve represents the thermodynamic equilibrium.  The points A, B, and C on the graphs also correspond.  Point A is the pinch point.  Point B is the ... not sure how to descirbe these"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4e3cc894924464ab394ec8642da9d73",
+       "model_id": "aed4dad5480241b5b9a7558e45619079",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,8 +306,9 @@
     "    fig, ax = plt.subplots(figsize=(7, 4))\n",
     "    ax.plot(l_sol, u1_sol)\n",
     "    ax.axvline(x=R, color='g', linestyle='-')\n",
-    "    ax.set_xlabel(r'$\\lambda$')\n",
-    "    ax.set_ylabel(r'$u_1$')\n",
+    "    ax.set_xlabel('Reflux Ratio')\n",
+    "    ax.set_ylabel('$X_{Benzene}$')\n",
+    "    ax.set_title('Pinch Point Composition Against Reflux Ratio')\n",
     "    ax.annotate('A', (1.1, 0.77), fontsize = 20)\n",
     "    ax.annotate('B', (0.3, 0.3), fontsize = 20)\n",
     "    ax.annotate('C', (1.1, 0.17), fontsize = 20)\n",
@@ -323,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
