--- a/src/Example4.ipynb
+++ b/src/Example4.ipynb
@@ -28,7 +28,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "MargulesModelTernary.__init__() missing 1 required positional argument: 'partial_pressure_eqs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m H2O_antoine \u001b[39m=\u001b[39m AE\u001b[39m.\u001b[39mAntoineEquationBase10(H2O_A, H2O_B, H2O_C)\n\u001b[1;32m     20\u001b[0m Methanol_antoine \u001b[39m=\u001b[39m AE\u001b[39m.\u001b[39mAntoineEquationBase10(Me_A, Me_B, Me_C)\n\u001b[0;32m---> 22\u001b[0m vle_model \u001b[39m=\u001b[39m MargulesModelTernary(\u001b[39m3\u001b[39;49m,P_sys,A_,[Acet_antoine, Methanol_antoine, H2O_antoine])\n",
+      "\u001b[0;31mTypeError\u001b[0m: MargulesModelTernary.__init__() missing 1 required positional argument: 'partial_pressure_eqs'"
+     ]
+    }
+   ],
    "source": [
     "A_ = np.array([[0, -316.699, 350.100], [-384.657, 0, 307.000],[290.200, 143.00, 0]])\n",
     "P_sys = 1\n",
