--- a/src/Example4.ipynb
+++ b/src/Example4.ipynb
@@ -28,19 +28,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "MargulesModelTernary.__init__() missing 1 required positional argument: 'partial_pressure_eqs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m H2O_antoine \u001b[39m=\u001b[39m AE\u001b[39m.\u001b[39mAntoineEquationBase10(H2O_A, H2O_B, H2O_C)\n\u001b[1;32m     20\u001b[0m Methanol_antoine \u001b[39m=\u001b[39m AE\u001b[39m.\u001b[39mAntoineEquationBase10(Me_A, Me_B, Me_C)\n\u001b[0;32m---> 22\u001b[0m vle_model \u001b[39m=\u001b[39m MargulesModelTernary(\u001b[39m3\u001b[39;49m,P_sys,A_,[Acet_antoine, Methanol_antoine, H2O_antoine])\n",
-      "\u001b[0;31mTypeError\u001b[0m: MargulesModelTernary.__init__() missing 1 required positional argument: 'partial_pressure_eqs'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A_ = np.array([[0, -316.699, 350.100], [-384.657, 0, 307.000],[290.200, 143.00, 0]])\n",
     "P_sys = 1\n",
@@ -63,7 +51,7 @@
     "H2O_antoine = AE.AntoineEquationBase10(H2O_A, H2O_B, H2O_C)\n",
     "Methanol_antoine = AE.AntoineEquationBase10(Me_A, Me_B, Me_C)\n",
     "\n",
-    "vle_model = MargulesModelTernary(3,P_sys,A_,[Acet_antoine, Methanol_antoine, H2O_antoine])\n"
+    "vle_model = MargulesModelTernary(3,1,A_,[\"Acet\", \"Meth\",\"H2O\"],[Acet_antoine, Methanol_antoine, H2O_antoine], True)"
    ]
   },
   {
@@ -96,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ea873ac58a849938560c7489832fb6f",
+       "model_id": "ef78dba8991141658627a618ebeedd20",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
