--- a/src/Example4.ipynb
+++ b/src/Example4.ipynb
@@ -31,8 +31,15 @@
    "outputs": [],
    "source": [
     "A_ = np.array([[0, -316.699, 350.100], [-384.657, 0, 307.000],[290.200, 143.00, 0]])\n",
-    "P_sys = 1\n",
     "\n",
+    "#Example 4 in Fidkowski is at 1 atm = 760 mmHg\n",
+    "P_sys = 1.0325 #mmHg\n",
+    "\n",
+    "#Antoine parameters from table 2.1 in page 25 of Doherty Malone Distillation Textbook\n",
+    "#Units: P_sat in mmHg and Temperature in Celsius \n",
+    "#Form is P_sat = A - B/(T+C)\n",
+    "\n",
+    "#Antoine parameters from NIST (Kelvin, Bar)\n",
     "#Acetaldehyde\n",
     "Acet_A = 3.68639\n",
     "Acet_B = 822.894\n",
@@ -61,10 +68,12 @@
    "outputs": [],
    "source": [
     "R1_slider =  widgets.FloatSlider(value=0.1, min=0, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "R2_slider =  widgets.FloatSlider(value=0.1, min=0, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
     "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
-    "out_oplines = Output()\n",
+    "out_1 = Output()\n",
+    "out_2 = Output()\n",
     "\n",
-    "def plot_rect_strip_ex2(R = R1_slider):\n",
+    "def plot_rect(R = R1_slider):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
     "    xF = np.array([0.3, 0.3, 0.4])\n",
     "    xD = np.array([0.5030, 0.4960, 0.0010])\n",
@@ -72,6 +81,29 @@
     "    distillation_model = DistillationModelTernary(vle_model, xF = xF, xD = xD, xB = xB, reflux = R)\n",
     "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
     "    distillation_model.plot_rect_comp(ax)\n",
+    "    plt.subplots_adjust(hspace=0)\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_rect_strip(R = R2_slider):\n",
+    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
+    "    xF = np.array([0.3, 0.3, 0.4])\n",
+    "    xD = np.array([0.5030, 0.4960, 0.0010])\n",
+    "    xB = np.array([1e-10, 0.0103,0.9897])\n",
+    "    distillation_model = DistillationModelTernary(vle_model, xF = xF, xD = xD, xB = xB, reflux = R)\n",
+    "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
+    "    distillation_model.plot_rect_strip_comp(ax)\n",
+    "    \n",
+    "    # for index,point in enumerate(fixed_points['values']):\n",
+    "    #     ax.scatter(point[0], point[1], marker='x', color='black', s=100, linewidths= 10)\n",
+    "    #     if fixed_points['source_indices'][index] == 0:\n",
+    "    #         label = \"Unstable\"\n",
+    "    #     elif fixed_points['source_indices'][index] == 1:\n",
+    "    #         label = \"saddle\"\n",
+    "    #     elif fixed_points['source_indices'][index] == 2:\n",
+    "    #         label = \"stable\"\n",
+    "    #     else:\n",
+    "    #         label = \"unexpected node: error\"\n",
+    "        # ax.text(point[0], point[1], f' {label}', verticalalignment='bottom', horizontalalignment='right')\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()"
    ]
@@ -84,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef78dba8991141658627a618ebeedd20",
+       "model_id": "9dd93607b21747acaedea3e69c3ae77b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,15 +130,50 @@
    ],
    "source": [
     "def on_go_button_click(b):\n",
-    "    with out_oplines:\n",
+    "    with out_1:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_rect_strip_ex2( R=R1_slider.value)\n",
+    "        plot_rect( R=R1_slider.value)\n",
     "        \n",
     "go_button = Button(description='Generate Plot')\n",
     "go_button.on_click(on_go_button_click)\n",
     "\n",
-    "layout = VBox([HBox([R1_slider, go_button]), out_oplines])\n",
+    "layout = VBox([HBox([R1_slider, go_button]), out_1])\n",
+    "display(layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa3429d885044db98ce2543e0d7a308a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(FloatSlider(value=0.1, description='Reflux Ratio:', max=2.0, readout_format='.1f…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "def on_go2_button_click(b):\n",
+    "    with out_2:\n",
+    "        clear_output(wait=True)\n",
+    "        plt.close('all')  # Close all open matplotlib plots\n",
+    "        plot_rect_strip( R=R2_slider.value)\n",
+    "        \n",
+    "go2_button = widgets.Button(description='Generate Plot')\n",
+    "go2_button.on_click(on_go2_button_click)\n",
+    "\n",
+    "layout = VBox([HBox([R2_slider, go2_button]), out_2])\n",
     "display(layout)"
    ]
   }
