corrected residue curves

--- a/src/Example4.ipynb
+++ b/src/Example4.ipynb
@@ -33,7 +33,7 @@
     "A_ = np.array([[0, -316.699, 350.100], [-384.657, 0, 307.000],[290.200, 143.00, 0]])\n",
     "\n",
     "#Example 4 in Fidkowski is at 1 atm = 760 mmHg\n",
-    "P_sys = 1.0325 #mmHg\n",
+    "P_sys = 1.01325 #bar\n",
     "\n",
     "#Antoine parameters from table 2.1 in page 25 of Doherty Malone Distillation Textbook\n",
     "#Units: P_sat in mmHg and Temperature in Celsius \n",
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9dd93607b21747acaedea3e69c3ae77b",
+       "model_id": "d0b14d6f515d43c9a9ebe81757b9dddf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa3429d885044db98ce2543e0d7a308a",
+       "model_id": "b94b37761b4c4c28b5d4005a0c10ff1e",
        "version_major": 2,
        "version_minor": 0
       },
