Fixed some mass balances

--- a/src/Example5.ipynb
+++ b/src/Example5.ipynb
@@ -120,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cca624d85bc47fca308d6e85f938d95",
+       "model_id": "d63f23cdea5f4540a6fd264defa1133b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,13 +139,15 @@
     }
    ],
    "source": [
-    "zF = np.array([0.25, 0.35, 0.4])\n",
+    "Fr = 1.0\n",
     "xFL = np.array([0.3, 0.6, 0.1])\n",
     "xFU = np.array([0.2, 0.1, 0.7])\n",
-    "xD = np.array([0.89, 0.05, 0.06]) \n",
-    "xB = np.array([0.01, 0.40,0.59])\n",
+    "zF = (Fr/(1+Fr))*xFU + (1/(1+Fr))*xFL                                #Knapp Equation 5.9\n",
+    "xD = np.array([0.93, 0.04, 0.03]) \n",
+    "D_B = ((zF[0] - 0.02) / (xD[0] - zF[0]))                             #Knapp Equation 5.13, set xB[0] = 0.01\n",
+    "xB = np.array([0.02, (zF[1] - D_B*(xD[1]-zF[1])), (zF[2] - D_B*(xD[2]*zF[2]))])\n",
+    "\n",
     "R = 3\n",
-    "Fr = 2.5\n",
     "distillation_model = DistillationModelDoubleFeed(AceMethWaterSys, Fr = Fr, zF = zF, xFL = xFL, xFU = xFU, xD = xD, xB = xB, reflux = R)\n",
     "\n",
     "# Create widgets\n",
@@ -182,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e68f40f75253485e87fadbbeae5fae0e",
+       "model_id": "9041d5f4fdba4675b58bf670e70e38c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,12 +209,14 @@
     "\n",
     "def plot_reflux_demo_ex5(R = R_slider):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
-    "    zF = np.array([0.25, 0.35, 0.4])\n",
+    "    Fr = 1.0\n",
     "    xFL = np.array([0.3, 0.6, 0.1])\n",
     "    xFU = np.array([0.2, 0.1, 0.7])\n",
-    "    xD = np.array([0.89, 0.05, 0.06]) \n",
-    "    xB = np.array([0.01, 0.40,0.59])\n",
-    "    Fr = 2.5\n",
+    "    zF = (Fr/(1+Fr))*xFU + (1/(1+Fr))*xFL                                #Knapp Equation 5.9\n",
+    "    xD = np.array([0.93, 0.04, 0.03]) \n",
+    "    D_B = ((zF[0] - 0.02) / (xD[0] - zF[0]))                             #Knapp Equation 5.13, set xB[0] = 0.01\n",
+    "    xB = np.array([0.02, (zF[1] - D_B*(xD[1]-zF[1])), (zF[2] - D_B*(xD[2]*zF[2]))])\n",
+    "\n",
     "    middle_start = 6\n",
     "    distillation_model = DistillationModelDoubleFeed(AceMethWaterSys, Fr = Fr, zF = zF, xFL = xFL, xFU = xFU, xD = xD, xB = xB, reflux = R)\n",
     "    fig, ax = plt.subplots(1,1,figsize= (5,10))\n",
@@ -245,18 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "222a2133aef9489a9c50418812598149",
+       "model_id": "4e23ef4371704432bffc41d0a8c359bc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.64, description='Feed Ratio:', max=40.0, step=0.001), Button…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.64, description='Feed Ratio:', max=5.0, step=0.001), Button(…"
       ]
      },
      "metadata": {},
@@ -264,7 +268,7 @@
     }
    ],
    "source": [
-    "Fr_slider =  widgets.FloatSlider(value=0.64, min=0, max=40, step=0.001,  description='Feed Ratio:', readout_format='.2f')\n",
+    "Fr_slider =  widgets.FloatSlider(value=0.64, min=0, max=5, step=0.001,  description='Feed Ratio:', readout_format='.2f')\n",
     "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
     "out_middle = Output()\n",
     "\n",
