Added component selection to each demo

--- a/src/Example5.ipynb
+++ b/src/Example5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,18 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f746c5adf35417abd77f446b6ea08ef",
+       "model_id": "156a69a53cb8431f92f2782855b86fb8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Middle Section Start:', options=(2, 4, 6, 8, 10), value=2), Output…"
+       "interactive(children=(Dropdown(description='Components:', options=('Acetone/Methanol/Water', 'Ethanol/Water/Et…"
       ]
      },
      "metadata": {},
@@ -161,12 +161,14 @@
     "xD = np.array([0.93, 0.04, 0.03]) \n",
     "D_B = ((zF[0] - 0.02) / (xD[0] - zF[0]))                             #Knapp Equation 5.13, set xB[0] = 0.01\n",
     "xB = np.array([0.02, (zF[1] - D_B*(xD[1]-zF[1])), (zF[2] - D_B*(xD[2]*zF[2]))])\n",
-    "\n",
     "R = 3\n",
-    "distillation_model = DistillationModelDoubleFeed(AceMethWaterSys, Fr = Fr, zF = zF, xFL = xFL, xFU = xFU, xD = xD, xB = xB, reflux = R)\n",
     "\n",
     "# Create an interactive plot function\n",
-    "def interactive_plot(middle_start):\n",
+    "def interactive_plot(system, middle_start):\n",
+    "    thermo_choice = AceMethWaterSys\n",
+    "    if system == 'Ethanol/Water/Ethylene Glycol':\n",
+    "        thermo_choice = EthWaterEGSys\n",
+    "    distillation_model = DistillationModelDoubleFeed(thermo_model=thermo_choice, Fr = Fr, zF = zF, xFL = xFL, xFU = xFU, xD = xD, xB = xB, reflux = R)\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(5, 10))\n",
     "    distillation_model.plot_rect_strip_comp(ax, middle_start=middle_start)\n",
     "    plt.show()\n",
@@ -177,9 +179,15 @@
     "    description='Middle Section Start:',\n",
     "    disabled=False\n",
     ")\n",
+    "system_widget = widgets.Dropdown(\n",
+    "    options=[\"Acetone/Methanol/Water\",\"Ethanol/Water/Ethylene Glycol\"],\n",
+    "    description='Components:',\n",
+    "    disabled=False\n",
+    ") \n",
+    "\n",
     "\n",
     "# Create an interactive plot with the dropdown widget\n",
-    "interactive(interactive_plot, middle_start=middle_start_widget)"
+    "interactive(interactive_plot, system=system_widget, middle_start=middle_start_widget)"
    ]
   },
   {
@@ -192,18 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "860d55a0833d434890ac8b5c98815753",
+       "model_id": "86d917d2309a47edb94f504f0933efcc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='Choice of Components:', options=('Acetone/Methanol/Water', 'Ethanol/Water…"
+       "VBox(children=(Dropdown(description='Components:', options=('Acetone/Methanol/Water', 'Ethanol/Water/Ethylene …"
       ]
      },
      "metadata": {},
@@ -211,19 +219,25 @@
     }
    ],
    "source": [
-    "R_slider =  widgets.FloatSlider(value=0.1, min=0, max=100, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "R_slider =  widgets.FloatLogSlider(value=1, min=0, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
     "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
     "system_widget = widgets.Dropdown(\n",
     "    options=[\"Acetone/Methanol/Water\",\"Ethanol/Water/Ethylene Glycol\"],\n",
-    "    description='Choice of Components:',\n",
-    "    disabled=False)\n",
+    "    description='Components:',\n",
+    "    disabled=False\n",
+    "    ) \n",
+    "# Create a dropdown widget for middle_start\n",
+    "middle_start_widget = widgets.Dropdown(\n",
+    "    options=[2, 4, 6, 8, 10],\n",
+    "    description='Middle Section Start:',\n",
+    "    disabled=False\n",
+    ")\n",
     "out_middle = Output()\n",
     "\n",
-    "def plot_reflux_demo_ex5(R = R_slider, thermo_system = system_widget.value):\n",
+    "def plot_reflux_demo_ex5(R = R_slider, thermo_system = system_widget.value, middle_start=6):\n",
     "    thermo_choice = AceMethWaterSys\n",
     "    if thermo_system == 'Ethanol/Water/Ethylene Glycol':\n",
     "        thermo_choice = EthWaterEGSys\n",
-    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
     "    Fr = 1.0\n",
     "    xFL = np.array([0.3, 0.6, 0.1])\n",
     "    xFU = np.array([0.2, 0.1, 0.7])\n",
@@ -232,7 +246,6 @@
     "    D_B = ((zF[0] - 0.02) / (xD[0] - zF[0]))                             #Knapp Equation 5.13, set xB[0] = 0.01\n",
     "    xB = np.array([0.02, (zF[1] - D_B*(xD[1]-zF[1])), (zF[2] - D_B*(xD[2]*zF[2]))])\n",
     "\n",
-    "    middle_start = 6\n",
     "    distillation_model = DistillationModelDoubleFeed(thermo_model = thermo_choice, Fr = Fr, zF = zF, xFL = xFL, xFU = xFU, xD = xD, xB = xB, reflux = R)\n",
     "    fig, ax = plt.subplots(1,1,figsize= (5,10))\n",
     "    distillation_model.plot_rect_strip_comp(ax, middle_start=middle_start)\n",
@@ -243,12 +256,12 @@
     "    with out_middle:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_reflux_demo_ex5(R=R_slider.value, thermo_system=system_widget.value)\n",
+    "        plot_reflux_demo_ex5(R=R_slider.value, thermo_system=system_widget.value, middle_start = middle_start_widget.value)\n",
     "        \n",
     "go_button = Button(description='Generate Plot')\n",
     "go_button.on_click(on_go_button_click)\n",
     "\n",
-    "layout = VBox([system_widget, HBox([R_slider, go_button]), out_middle])\n",
+    "layout = VBox([system_widget,middle_start_widget, HBox([R_slider, go_button]), out_middle])\n",
     "display(layout)\n"
    ]
   },
@@ -262,26 +275,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0edd846bde1844a287653750857c9b3a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Dropdown(description='Components:', options=('Acetone/Methanol/Water', 'Ethanol/Water/Ethylene …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "Fr_slider =  widgets.FloatSlider(value=0.64, min=0, max=5, step=0.001,  description='Feed Ratio:', readout_format='.2f')\n",
+    "Fr_slider =  widgets.FloatLogSlider(value=0.64, min=-1, max=1, step=0.001,  description='Feed Ratio:', readout_format='.2f')\n",
     "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
+    "system_widget = widgets.Dropdown(\n",
+    "    options=[\"Acetone/Methanol/Water\",\"Ethanol/Water/Ethylene Glycol\"],\n",
+    "    description='Components:',\n",
+    "    disabled=False\n",
+    "    ) \n",
+    "# Create a dropdown widget for middle_start\n",
+    "middle_start_widget = widgets.Dropdown(\n",
+    "    options=[2, 4, 6, 8, 10],\n",
+    "    description='Middle Section Start:',\n",
+    "    disabled=False\n",
+    ")\n",
     "out_middle = Output()\n",
     "\n",
-    "def plot_reflux_demo_ex5(Fr = Fr_slider):\n",
-    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one\n",
+    "def plot_reflux_demo_ex5_demo4(Fr = Fr_slider, thermo_system = system_widget.value, middle_start=6):\n",
+    "    thermo_choice = AceMethWaterSys\n",
+    "    if thermo_system == 'Ethanol/Water/Ethylene Glycol':\n",
+    "        thermo_choice = EthWaterEGSys\n",
+    "    R = 3\n",
     "    xFL = np.array([0.3, 0.6, 0.1])\n",
     "    xFU = np.array([0.2, 0.1, 0.7])\n",
     "    zF = (Fr/(1+Fr))*xFU + (1/(1+Fr))*xFL                                #Knapp Equation 5.9\n",
-    "    xD = np.array([0.95, 0.04, 0.01]) \n",
-    "    D_B = ((zF[0] - 0.01) / (xD[0] - zF[0]))                             #Knapp Equation 5.13, set xB[0] = 0.01\n",
-    "    xB = np.array([0.01, (zF[1] - D_B*(xD[1]-zF[1])), (zF[2] - D_B*(xD[2]*zF[2]))])\n",
+    "    xD = np.array([0.93, 0.04, 0.03]) \n",
+    "    D_B = ((zF[0] - 0.02) / (xD[0] - zF[0]))                             #Knapp Equation 5.13, set xB[0] = 0.01\n",
+    "    xB = np.array([0.02, (zF[1] - D_B*(xD[1]-zF[1])), (zF[2] - D_B*(xD[2]*zF[2]))])\n",
     "\n",
-    "    R = 3\n",
-    "    middle_start = 6\n",
-    "    distillation_model = DistillationModelDoubleFeed(AceMethWaterSys, Fr = Fr, zF = zF, xFL = xFL, xFU = xFU, xD = xD, xB = xB, reflux = R)\n",
+    "    distillation_model = DistillationModelDoubleFeed(thermo_model = thermo_choice, Fr = Fr, zF = zF, xFL = xFL, xFU = xFU, xD = xD, xB = xB, reflux = R)\n",
     "    fig, ax = plt.subplots(1,1,figsize= (5,10))\n",
     "    distillation_model.plot_rect_strip_comp(ax, middle_start=middle_start)\n",
     "    plt.subplots_adjust(hspace=0)\n",
@@ -292,12 +332,12 @@
     "    with out_middle:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_reflux_demo_ex5(Fr=Fr_slider.value)\n",
+    "        plot_reflux_demo_ex5_demo4(Fr=Fr_slider.value, thermo_system=system_widget.value, middle_start = middle_start_widget.value)\n",
     "        \n",
     "go_button = Button(description='Generate Plot')\n",
     "go_button.on_click(on_go_button_click)\n",
     "\n",
-    "layout = VBox([HBox([Fr_slider, go_button]), out_middle])\n",
+    "layout = VBox([system_widget,middle_start_widget, HBox([Fr_slider, go_button]), out_middle])\n",
     "display(layout)"
    ]
   }
