--- a/src/ex3_arclength_cont.ipynb
+++ b/src/ex3_arclength_cont.ipynb
@@ -2,9 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.92391943 0.94875807]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb Cell 1\u001b[0m line \u001b[0;36m6\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=64'>65</a>\u001b[0m tau       \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([ (old_sol[\u001b[39m0\u001b[39m] \u001b[39m-\u001b[39m old_sol_m1[\u001b[39m0\u001b[39m])\u001b[39m/\u001b[39mdel_s, (old_sol[\u001b[39m1\u001b[39m] \u001b[39m-\u001b[39m old_sol_m1[\u001b[39m1\u001b[39m])\u001b[39m/\u001b[39mdel_s, (lam_0 \u001b[39m-\u001b[39m lam_m1)\u001b[39m/\u001b[39mdel_s  ])\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=66'>67</a>\u001b[0m prev_sol    \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([old_sol[\u001b[39m0\u001b[39m], old_sol[\u001b[39m1\u001b[39m], lam_0])\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=67'>68</a>\u001b[0m new_sol     \u001b[39m=\u001b[39m fsolve(eqns_aug, x0 \u001b[39m=\u001b[39;49m prev_sol \u001b[39m+\u001b[39;49m ds\u001b[39m*\u001b[39;49mtau, args \u001b[39m=\u001b[39;49m (tau, ds, prev_sol))\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=69'>70</a>\u001b[0m \u001b[39m# Edit the variables that hold the two prior solutions\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=70'>71</a>\u001b[0m lam_m1, lam_0 \u001b[39m=\u001b[39m lam_0, new_sol[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "File \u001b[0;32m~/anaconda3/envs/ctei/lib/python3.9/site-packages/scipy/optimize/_minpack_py.py:162\u001b[0m, in \u001b[0;36mfsolve\u001b[0;34m(func, x0, args, fprime, full_output, col_deriv, xtol, maxfev, band, epsfcn, factor, diag)\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \u001b[39mFind the roots of a function.\u001b[39;00m\n\u001b[1;32m     52\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    152\u001b[0m \n\u001b[1;32m    153\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    154\u001b[0m options \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mcol_deriv\u001b[39m\u001b[39m'\u001b[39m: col_deriv,\n\u001b[1;32m    155\u001b[0m            \u001b[39m'\u001b[39m\u001b[39mxtol\u001b[39m\u001b[39m'\u001b[39m: xtol,\n\u001b[1;32m    156\u001b[0m            \u001b[39m'\u001b[39m\u001b[39mmaxfev\u001b[39m\u001b[39m'\u001b[39m: maxfev,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    159\u001b[0m            \u001b[39m'\u001b[39m\u001b[39mfactor\u001b[39m\u001b[39m'\u001b[39m: factor,\n\u001b[1;32m    160\u001b[0m            \u001b[39m'\u001b[39m\u001b[39mdiag\u001b[39m\u001b[39m'\u001b[39m: diag}\n\u001b[0;32m--> 162\u001b[0m res \u001b[39m=\u001b[39m _root_hybr(func, x0, args, jac\u001b[39m=\u001b[39;49mfprime, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49moptions)\n\u001b[1;32m    163\u001b[0m \u001b[39mif\u001b[39;00m full_output:\n\u001b[1;32m    164\u001b[0m     x \u001b[39m=\u001b[39m res[\u001b[39m'\u001b[39m\u001b[39mx\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "File \u001b[0;32m~/anaconda3/envs/ctei/lib/python3.9/site-packages/scipy/optimize/_minpack_py.py:239\u001b[0m, in \u001b[0;36m_root_hybr\u001b[0;34m(func, x0, args, jac, col_deriv, xtol, maxfev, band, eps, factor, diag, **unknown_options)\u001b[0m\n\u001b[1;32m    237\u001b[0m     \u001b[39mif\u001b[39;00m maxfev \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    238\u001b[0m         maxfev \u001b[39m=\u001b[39m \u001b[39m200\u001b[39m \u001b[39m*\u001b[39m (n \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[0;32m--> 239\u001b[0m     retval \u001b[39m=\u001b[39m _minpack\u001b[39m.\u001b[39;49m_hybrd(func, x0, args, \u001b[39m1\u001b[39;49m, xtol, maxfev,\n\u001b[1;32m    240\u001b[0m                              ml, mu, epsfcn, factor, diag)\n\u001b[1;32m    241\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    242\u001b[0m     _check_func(\u001b[39m'\u001b[39m\u001b[39mfsolve\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mfprime\u001b[39m\u001b[39m'\u001b[39m, Dfun, x0, args, n, (n, n))\n",
+      "\u001b[1;32m/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb Cell 1\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=40'>41</a>\u001b[0m l         \u001b[39m=\u001b[39m uvec[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m res       \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros_like(uvec)\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=42'>43</a>\u001b[0m res[\u001b[39m0\u001b[39m:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m eqns(uvec[:\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m], l)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=43'>44</a>\u001b[0m res[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]   \u001b[39m=\u001b[39m ((uvec[\u001b[39m0\u001b[39m] \u001b[39m-\u001b[39m u0[\u001b[39m0\u001b[39m])\u001b[39m*\u001b[39mtau[\u001b[39m0\u001b[39m]) \u001b[39m+\u001b[39m ((uvec[\u001b[39m1\u001b[39m] \u001b[39m-\u001b[39m u0[\u001b[39m1\u001b[39m])\u001b[39m*\u001b[39mtau[\u001b[39m1\u001b[39m]) \u001b[39m+\u001b[39m ((uvec[\u001b[39m2\u001b[39m] \u001b[39m-\u001b[39m u0[\u001b[39m2\u001b[39m])\u001b[39m*\u001b[39mtau[\u001b[39m2\u001b[39m]) \u001b[39m-\u001b[39m ds\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m \u001b[39mreturn\u001b[39;00m res\n",
+      "\u001b[1;32m/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb Cell 1\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=31'>32</a>\u001b[0m u1 \u001b[39m=\u001b[39m uvec[\u001b[39m0\u001b[39m]; u2 \u001b[39m=\u001b[39m uvec[\u001b[39m1\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=32'>33</a>\u001b[0m res \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(\u001b[39m2\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=34'>35</a>\u001b[0m res[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m distillation_model\u001b[39m.\u001b[39;49mthermo_model\u001b[39m.\u001b[39;49mconvert_x_to_y(np\u001b[39m.\u001b[39;49marray([u1, \u001b[39m1\u001b[39;49m\u001b[39m-\u001b[39;49mu1]))[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m-\u001b[39m u2\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=35'>36</a>\u001b[0m res[\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m distillation_model\u001b[39m.\u001b[39mchange_r(l)\u001b[39m.\u001b[39mrectifying_step_xtoy(np\u001b[39m.\u001b[39marray([u1, \u001b[39m1\u001b[39m\u001b[39m-\u001b[39mu1]))[\u001b[39m0\u001b[39m] \u001b[39m-\u001b[39m u2\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39mreturn\u001b[39;00m res\n",
+      "File \u001b[0;32m~/projects/ctei_ext_distillation/src/thermo_models/VLEEmpiricalModel.py:45\u001b[0m, in \u001b[0;36mVLEEmpiricalModelBinary.convert_x_to_y\u001b[0;34m(self, x_array)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Converts x to y using the provided function.\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \n\u001b[1;32m     37\u001b[0m \u001b[39mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[39m    message (str): Informational message.\u001b[39;00m\n\u001b[1;32m     43\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     44\u001b[0m x \u001b[39m=\u001b[39m x_array[\u001b[39m0\u001b[39m]\n\u001b[0;32m---> 45\u001b[0m solution \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfunc_xtoy(x_array)\n\u001b[1;32m     46\u001b[0m \u001b[39mreturn\u001b[39;00m solution, \u001b[39m\"\u001b[39m\u001b[39mDoes not use a solver\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "\u001b[1;32m/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb Cell 1\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mxtoy\u001b[39m(x):\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m     a, b \u001b[39m=\u001b[39m \u001b[39m9\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m0.6\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=19'>20</a>\u001b[0m     y \u001b[39m=\u001b[39m a\u001b[39m*\u001b[39;49mx\u001b[39m/\u001b[39;49m(\u001b[39m1\u001b[39;49m\u001b[39m+\u001b[39;49m(a\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\u001b[39m*\u001b[39;49mx) \u001b[39m+\u001b[39mb\u001b[39m*\u001b[39mx\u001b[39m*\u001b[39m(\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m x)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/amk/projects/ctei_ext_distillation/src/ex3_arclength_cont.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=20'>21</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m y\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +46,6 @@
     "import math\n",
     "from scipy.optimize import fsolve\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "#Define empirical relationship\n",
     "def xtoy(x):\n",
@@ -30,7 +54,7 @@
     "    return y\n",
     "\n",
     "# Create a Raoult's law object\n",
-    "vle_model = VLEEmpiricalModelBinary(xtoy)\n",
+    "vle_model = VLEEmpiricalModelBinary(xtoy, '')\n",
     "xD = 0.95\n",
     "xB = 0.05\n",
     "r = 0 # starting value\n",
@@ -58,7 +82,7 @@
     "ds = 0.00001\n",
     "lam_m1 = 0.05\n",
     "old_sol_m1 = fsolve(eqns, x0=np.array([0.9, 0.1]), args=(lam_m1,))\n",
-    "\n",
+    "print(old_sol_m1)\n",
     "lam_0 = lam_m1 + ds\n",
     "old_sol = fsolve(eqns, x0=old_sol_m1, args=(lam_0,))\n",
     "\n",
@@ -341,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
