--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -7,12 +7,12 @@
     "# Example 1: Separation of a Binary Mixture\n",
     "\n",
     "\n",
-    "#### This example shows the distillation column for a mixture of Benzene (Light Key) and Toluene (Heavy Key)\n",
-    "#### The rectifying and stripping operating lines of the column are affected by 3 parameters -- the reflux ratio, and the concentrations of the distillate and bottoms streams leaving from the top and bottom of the column, respectively.\n",
+    "This example shows the distillation column for a mixture of Benzene (Light Key) and Toluene (Heavy Key).\n",
+    "The rectifying and stripping operating lines of the column are affected by 3 parameters -- the reflux ratio, and the concentrations of the distillate and bottoms streams leaving from the top and bottom of the column, respectively.\n",
     "\n",
-    "#### A simple Raoult's Law Model is used to produce the thermodynamic equilibrium data for this mixture.\n",
+    "A simple Raoult's Law Model is used to produce the thermodynamic equilibrium data for this mixture.\n",
     "\n",
-    "#### The Reflux Ratio must be greater than a minimum value for a feasible separation.  This demo will show that if the Reflux Ration is too low, the rectifying and stripping operating lines will not intersect beneath the Equilibrium Curve.\n",
+    "The Reflux Ratio must be greater than a minimum value for a feasible separation.  This demo will show that if the Reflux Ration is too low, the rectifying and stripping operating lines will not intersect beneath the Equilibrium Curve.\n",
     "\n"
    ]
   },
@@ -140,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f731e904a2654304b9dbeac0abb94a12",
+       "model_id": "a1239169d29b4488a01d834a8022182d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,10 +153,6 @@
     }
    ],
    "source": [
-    "# Create your interactive widget but don't display it\n",
-    "strip_plot = interactive(plot_distil_stripping_ex1, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
-    "\n",
-    "# Define your button click behavior\n",
     "def on_go_button_click(b):\n",
     "    with out_strip:\n",
     "        clear_output(wait=True)\n",
@@ -167,7 +163,8 @@
     "go_button.on_click(on_go_button_click)\n",
     "\n",
     "layout = VBox([HBox([xB1_slider, R1_slider]), go_button, out_strip])\n",
-    "display(layout)\n"
+    "display(layout)\n",
+    "\n"
    ]
   },
   {
@@ -193,7 +190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bdea4d1e27a4f9c9c43d6008304427f",
+       "model_id": "23ec47d4997a4134af1c3e088a0e09d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +242,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b3a2c00e7444fdd9c943d5811bd44ef",
+       "model_id": "00c765be671c431f901665c25fcd6cdf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
