--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -90,10 +90,11 @@
     "def plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
     "    distillation_model = DistillationModelBinary(vle_model, xF = np.array([0.5, 0.5]), xD = np.array([xD, 1 - xD]), xB = np.array([xB, 1 - xB]), reflux = R)\n",
-    "    fig, axs = plt.subplots(2, 3, figsize=(15, 5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "    fig, axs = plt.subplots(2, 3, figsize=(15, 4.5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    distillation_model.plot_distil_strip_binary(axs[0][0], axs[1][0])\n",
     "    distillation_model.plot_distil_rect_binary(axs[0][1], axs[1][1])\n",
     "    distillation_model.plot_distil_binary(axs[0][2], axs[1][2])\n",
+    "    plt.subplots_adjust(wspace=0.25)\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
     "\n",
@@ -140,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1239169d29b4488a01d834a8022182d",
+       "model_id": "30b007bd68a548a18eab1b2e8ed6f9ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,7 +191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23ec47d4997a4134af1c3e088a0e09d1",
+       "model_id": "56f85e41973c4cd0a0596318be56eec8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -242,7 +243,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00c765be671c431f901665c25fcd6cdf",
+       "model_id": "c77958e445764a75aed2068ddee98915",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +266,7 @@
     "        plt.close('all')  # Close all open matplotlib plots\n",
     "        plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
     "\n",
-    "oplines_button = Button(description='Generate Oplines Plot')\n",
+    "oplines_button = Button(description='Generate Plots')\n",
     "oplines_button.on_click(on_oplines_button_click)\n",
     "\n",
     "layout_oplines = VBox([HBox(oplines_plot.children[:-1]), oplines_button, out_oplines])\n",
