corrected fixedpoint extraction for example 5

--- a/src/Example5.ipynb
+++ b/src/Example5.ipynb
@@ -340,13 +340,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b329d8b282d4e1dae7414e60ca8854a",
+       "model_id": "438554b08b45403db1b5b2abcd54f82e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,13 +429,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b917330362f74dc490fcfdcd266b8299",
+       "model_id": "5453b2d0442d416e8140e012ee980a5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,7 +449,7 @@
    ],
    "source": [
     "Fr_slider =  widgets.FloatLogSlider(value=0.64, min=-1, max=1, step=0.001,  description='Feed Ratio:', readout_format='.2f')\n",
-    "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
+    "demo4_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
     "system_widget = widgets.Dropdown(\n",
     "    options=[\"Acetone/Methanol/Water\",\"Ethanol/Water/Ethylene Glycol\"],\n",
     "    description='Components:',\n",
