--- a/src/Example5.ipynb
+++ b/src/Example5.ipynb
@@ -128,6 +128,7 @@
      "output_type": "stream",
      "text": [
       "Integration stopped due to overflow, NaN values, or out-of-bound values.\n",
+      "Integration stopped due to overflow, NaN values, or out-of-bound values.\n",
       "Integration stopped due to overflow, NaN values, or out-of-bound values.\n"
      ]
     },
@@ -202,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48eecffcb8134e8395d0c7daed1560c9",
+       "model_id": "13d24404893942e1866e1d90f6b49c9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,7 +279,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74e2999eefc04a72a0dce6921baf17e8",
+       "model_id": "9873676959f04b32aafe5254fb29f8b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,13 +341,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "438554b08b45403db1b5b2abcd54f82e",
+       "model_id": "536aa7080c01401b8647cec2a03b61bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,13 +430,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5453b2d0442d416e8140e012ee980a5b",
+       "model_id": "3c08fc773bd942b692e8d7cd504fb848",
        "version_major": 2,
        "version_minor": 0
       },
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
