--- a/src/Example5.ipynb
+++ b/src/Example5.ipynb
@@ -40,7 +40,9 @@
     "    demo_4_fr_to_fixed_points_AceMethWaterSys = pickle.load(f)\n",
     "    \n",
     "with open(\"./utils/pickles/demo_4_fr_to_fixed_points_ethanolwaterethylene.pkl\", \"rb\") as f:\n",
-    "    demo_4_fr_to_fixed_points_ethanolwaterethylene = pickle.load(f)"
+    "    demo_4_fr_to_fixed_points_ethanolwaterethylene = pickle.load(f)\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -76,7 +78,9 @@
     "        \n",
     "P_sys = 101325\n",
     "# Create a Raoult's law object\n",
-    "AceMethWaterSys = VanLaarModel(num_comp = 3, P_sys = P_sys, A_coeff = A_ij, comp_names = [\"Acetone\",\"Methanol\",\"Water\"], partial_pressure_eqs = [AcetoneAntoine, MethanolAntoine, WaterAntoine])\n"
+    "AceMethWaterSys = VanLaarModel(num_comp = 3, P_sys = P_sys, A_coeff = A_ij, comp_names = [\"Acetone\",\"Methanol\",\"Water\"], partial_pressure_eqs = [AcetoneAntoine, MethanolAntoine, WaterAntoine])\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -130,7 +134,6 @@
       "Integration stopped due to overflow, NaN values, or out-of-bound values.\n",
       "Integration stopped due to overflow, NaN values, or out-of-bound values.\n",
       "Integration stopped due to overflow, NaN values, or out-of-bound values.\n",
-      "Integration stopped due to overflow, NaN values, or out-of-bound values.\n",
       "Integration stopped due to overflow, NaN values, or out-of-bound values.\n"
      ]
     },
@@ -174,13 +177,13 @@
     "# out_residue = Output()\n",
     "# rcm = phase_portraits(thermo_model=EthWaterEGSys)\n",
     "# fig, ax = plt.subplots(1,1,figsize= (7,7))\n",
-    "# rcm.plot_residue_curve(ax, [0,7],data_points = 100, \n",
+    "# rcm.plot_residue_curve(ax, [0,7],data_points = 1000, \n",
     "#                             init_comps = [ \n",
     "#                                             np.array([0.4,0.4,0.2]),\n",
-    "#                                             np.array([0.6,0.2,0.2]),\n",
-    "#                                             np.array([0.6,0.1,0.3]),\n",
-    "#                                             np.array([0.1,0.8,0.1]),\n",
-    "#                                             np.array([0.1,0.1,0.8])\n",
+    "#                                             # np.array([0.6,0.2,0.2]),\n",
+    "#                                             # np.array([0.6,0.1,0.3]),\n",
+    "#                                             # np.array([0.1,0.8,0.1]),\n",
+    "#                                             # np.array([0.1,0.1,0.8])\n",
     "#                                             ])\n",
     "# plt.show()"
    ]
@@ -208,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3742306f852427496fda40c904482ff",
+       "model_id": "fa017bda1469476a91e4c6678da65764",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,13 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93a6334c76ff43f1bce56142c26baeaa",
+       "model_id": "c9a6f55f4e5d42d7be31b0d87072c4d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -297,7 +300,7 @@
        "interactive(children=(Dropdown(description='Components:', options=('Acetone/Methanol/Water', 'Ethanol/Water/Et…"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,13 +357,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32ca981e97e14e5c85fe450288198bfc",
+       "model_id": "cb4aaed25cd2477eaba0b2b6f1fd3530",
        "version_major": 2,
        "version_minor": 0
       },
@@ -404,12 +407,13 @@
     "    xB = np.array([0.02, (zF[1] - D_B*(xD[1]-zF[1])), (zF[2] - D_B*(xD[2]*zF[2]))])\n",
     "\n",
     "    distillation_model = DistillationModelDoubleFeed(thermo_model = thermo_choice, Fr = Fr, zF = zF, xFL = xFL, xFU = xFU, xD = xD, xB = xB, reflux = R)\n",
-    "    fig, ax = plt.subplots(2,2,figsize= (20,10))\n",
+    "    fig, ax = plt.subplots(1,2,figsize= (20,10))\n",
     "    distillation_model.plot_rect_strip_comp(ax[0], middle_start=middle_start)\n",
     "    middle_sect_vector_field = phase_portraits(thermo_model=thermo_choice,distil_model=distillation_model)\n",
-    "    middle_sect_vector_field.plot_vector_field_middle(ax[0][1],20)\n",
+    "    middle_sect_vector_field.plot_vector_field_middle(ax[1],20)\n",
     "    #add the vector field pltos that changes with R\n",
     "    \n",
+    "\n",
     "    for subplots in ax:\n",
     "        subplots.set_aspect('equal')\n",
     "       \n",
@@ -445,13 +449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce4c09d43f90485982d50ee482876fc2",
+       "model_id": "762bb4bfe2e44fb4a3b7ed4cc390f798",
        "version_major": 2,
        "version_minor": 0
       },
@@ -529,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
