Added descriptions for Ex4 demos

--- a/Example4.ipynb
+++ b/Example4.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 4: Ternary Tangent Pinch\n",
+    "\n",
+    "#### Example 3 depicted a tangent pinch for a binary system.  This example shows how a tangent pinch is represented in a ternary system of Acetaldehyde, Methanol, and Water.\n",
+    "\n",
+    "In these systems, as Reflux Ratio changes, the fixed point which terminates the rectifying section changes.  However, at the tangent pinch, a very small increment in reflux ratio causes the fixed point composition to rapidly shoot to a new value. \n",
+    "\n",
+    "This example shows the rectifying section experiences a major jump at this tangent pinch, which occurs at a reflux ratio between 0.1 and 0.2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,6 +35,13 @@
     "from IPython.display import clear_output\n",
     "from src.thermo_models.MargulesModel import *\n",
     "from src.thermo_models.WilsonModel import *\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### System parameters using Margules Model"
    ]
   },
   {
@@ -67,8 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "R1_slider =  widgets.FloatSlider(value=0.1, min=0, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
-    "R2_slider =  widgets.FloatSlider(value=0.1, min=0, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "R1_slider =  widgets.FloatSlider(value=0.1, min=0, max=1, step=0.1,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "R2_slider =  widgets.FloatSlider(value=0.1, min=0, max=1, step=0.1,  description='Reflux Ratio:', readout_format='.1f')\n",
     "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
     "out_1 = Output()\n",
     "out_2 = Output()\n",
@@ -109,19 +129,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 1: Rectifying Section\n",
+    "\n",
+    "Use the slider to vary the reflux ratio.  Notice how the end of the rectifying section always changes with the reflux ratio, but experiences a much more rapid change between values of 0.1 and 0.2."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2d159cd6edc436988903b4eef64fe9d",
+       "model_id": "eb99ba6e9fea40f5859c19afeec776c5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.1, description='Reflux Ratio:', max=2.0, readout_format='.1f…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.5, description='Reflux Ratio:', max=1.0, readout_format='.1f…"
       ]
      },
      "metadata": {},
@@ -143,6 +172,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 2: Full Column\n",
+    "\n",
+    "What are the implications of this ternary tangent pinch?\n",
+    "\n",
+    "As Example 2 discussed, for a ternary column to be feasible, the rectifying and stripping sections need to overlap.\n",
+    "Change the reflux ratio again, and notice how the jump at the ternary pinch value is necessary for the column to be feasible.  This demonstration also highlights how slight changes to reflux ratio have a much larger impact on the rectifying section than on the stripping section."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -150,12 +191,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb07cd0c692e4972a15ce8e8a57e9051",
+       "model_id": "7d81edbf037646bfb02766f46c819cd1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.1, description='Reflux Ratio:', max=2.0, readout_format='.1f…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.1, description='Reflux Ratio:', max=1.0, readout_format='.1f…"
       ]
      },
      "metadata": {},
@@ -194,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
