--- a/src/Example4.ipynb
+++ b/src/Example4.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 4: Ternary Tangent Pinch\n",
+    "\n",
+    "#### Example 3 depicted a tangent pinch for a binary system.  This example shows how a tangent pinch is represented in a ternary system of Acetaldehyde, Methanol, and Water.\n",
+    "\n",
+    "In these systems, as Reflux Ratio changes, the fixed point which terminates the rectifying section changes.  However, at the tangent pinch, a very small increment in reflux ratio causes the fixed point composition to rapidly shoot to a new value. \n",
+    "\n",
+    "This example shows the rectifying section experiences a major jump at this tangent pinch, which occurs at a reflux ratio between 0.1 and 0.2."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +35,13 @@
     "from IPython.display import clear_output\n",
     "from thermo_models.MargulesModel import *\n",
     "from thermo_models.WilsonModel import *\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### System parameters using Margules Model"
    ]
   },
   {
@@ -109,6 +129,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 1: Rectifying Section\n",
+    "\n",
+    "Use the slider to vary the reflux ratio.  Notice how the end of the rectifying section always changes with the reflux ratio, but experiences a much more rapid change between values of 0.1 and 0.2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -140,6 +169,18 @@
     "\n",
     "layout = VBox([HBox([R1_slider, go_button]), out_1])\n",
     "display(layout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 2: Full Column\n",
+    "\n",
+    "What are the implications of this ternary tangent pinch?\n",
+    "\n",
+    "As Example 2 discussed, for a ternary column to be feasible, the rectifying and stripping sections need to overlap.\n",
+    "Change the reflux ratio again, and notice how the jump at the ternary pinch value is necessary for the column to be feasible.  This demonstration also highlights how slight changes to reflux ratio have a much larger impact on the rectifying section than on the stripping section."
    ]
   },
   {
@@ -194,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
